tests/purs/failing/SelfCycleInForeignDataKinds.out
Error found:
at tests/purs/failing/SelfCycleInForeignDataKinds.purs:4:1 - 4:31 (line 4, column 1 - line 4, column 31)

  A kind declaration '[33mFoo[0m' may not refer to itself in its own signature.


See https://github.com/purescript/documentation/blob/master/errors/CycleInKindDeclaration.md for more information,
or to contribute content related to this error.

